--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,6 @@ framework = arduino
 lib_deps = 
 	adafruit/Adafruit Fingerprint Sensor Library@^2.1.0
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
+	adafruit/Adafruit GFX Library@^1.11.9
+	adafruit/Adafruit SSD1306@^2.5.9
 	FS
