--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^3.0.0
 	adafruit/Adafruit GFX Library@^1.11.9
 	adafruit/Adafruit SSD1306@^2.5.9
+	chris--a/Keypad@^3.1.1
 	FS
